--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width:100%;
 }
 section#model {
   margin-top: 90px;
