--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,26 @@ h2 {
     background-color: var(--gray);
     border-radius: 4px;
     overflow: hidden;
+    position: relative;
+}
+.loader {
+  position: absolute;
+  top:50%;
+  left:50%;
+  border: 4px solid #ccc; /* Light grey */
+  border-top: 4px solid #fff; /* Blue */
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform:  translate(-50%,-50%) rotate(0deg); }
+  100% { transform:  translate(-50%,-50%) rotate(360deg); }
+}
+#webcam-wrapper>canvas {
+    position: relative;
 }
 #webcam {
     width: var(--box-size);
